syntax = "proto3";

package email_proto;

option go_package = "github.com/Guise322/ozon-exercises/common/email_service_pb/";

message SubscribeCom {}

message ComResponse {
    string Result = 1;
}

message EmailRequest {
    int64 Id = 1;
}

message EmailResponse {
    int64 Id = 1;
    string From = 2;
    string To = 3;
    string Text = 4;
}

service Email {
    rpc GetEmail (EmailRequest) returns (EmailResponse);
    rpc SubscribeToInbox (SubscribeCom) returns (ComResponse);
}

message NewEmailCom {
    int64 Id = 1; 
}

message Empty {}

service NewEmailNotif {
    rpc Notify(NewEmailCom) returns (Empty);
}